[metadata]
name = tropopause
author = Michael Hadwiger
author_email = m.hadwiger@student.tugraz.at
license = MIT
description =
long_description_content_type=
long_description =
url =
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = .
setup_requires =
    setuptools_scm
python_requires = >=3.7
install_requires =
    netCDF4
    xarray
    numpy
    matplotlib


[options.package_data]
* =
    data/*.nc

[options.entry_points]
console_scripts =
  tropopause = tropopause.cli:tropopause
